Added classes and some styling

--- a/about-me.html
+++ b/about-me.html
@@ -31,7 +31,7 @@
       <h2>About me</h2>
     </div>
 
-    <main>
+    <main class="about-me">
       
       <img class="selfie" src="img/about-me.jpg" alt="Photo of Hannah">
 
@@ -44,15 +44,15 @@
       <img src="img/Tiger-feeding.jpg" alt="Photo of Hannah feeding a tiger">
     </main>
 
-    <aside>
-      <h2>Follow Me</h2>
-        <ul>
+    <aside class="about-me">
+      <h2 class="follow">Follow Me</h2>
+        <ul class="follow">
           <li>500px</li>
           <li>Instagram</li>
           <li>Twitter</li>
         </ul>
 
-      <h2>Places to go</h2>
+      <h2 class="countries">Places to go</h2>
         <div class="countries">
           <div class="country">
             <span>India</span>
